--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -102,13 +102,53 @@
                             </div>
                         </div>
 
+                        <t t-if="o.vehicle_id">
+                            <t t-set="vehicle" t-value="o.vehicle_id"/>
+                            <div class="oe_structure">
+                                <strong>Vehicle</strong>
+                                <table class="table o_main_table table-borderless" name="vehicle_table">
+                                    <thead>
+                                        <th name="th_make" class="text-start"><span>Make</span></th>
+                                        <th name="th_model" class="text-start"><span>Model</span></th>
+                                        <th name="th_year" class="text-start"><span>Year</span></th>
+                                        <th name="th_vin_sn" class="text-start"><span>Chassis No</span></th>
+                                        <th name="th_vin_sn" class="text-start"><span>License Plate</span></th>
+                                        <th name="th_vin_sn" class="text-start"><span>Odometer</span></th>
+                                    </thead>
+                                    <tbody class="invoice_tbody">
+                                        <tr>
+                                            <td>
+                                                <span t-if="vehicle.model_id" t-field="vehicle.model_id.name">Make</span>
+                                            </td>
+                                            <td>
+                                                <span t-if="vehicle.model_id and vehicle.model_id.brand_id" t-field="vehicle.model_id.brand_id.name">Brand</span>
+                                            </td>
+                                            <td>
+                                                <span t-if="vehicle.model_year" t-field="vehicle.model_year">Year</span>
+                                            </td>
+                                            <td>
+                                                <span t-if="vehicle.vin_sn" t-field="vehicle.vin_sn">VIN/SN</span>
+                                            </td>
+                                            <td>
+                                                <span t-if="vehicle.license_plate" t-field="vehicle.license_plate">VIN/SN</span>
+                                            </td>
+                                            <td>
+                                                <span t-field="o.vehicle_odometer">VIN/SN</span>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </t>
+
                         <t t-set="display_discount" t-value="any(l.discount for l in o.invoice_line_ids)"/>
                         <div class="oe_structure"></div>
                         <table class="o_has_total_table table o_main_table table-borderless" name="invoice_line_table">
                             <thead>
                                 <tr>
-                                    <th name="th_description" class="text-start"><span>Description</span></th>
                                     <th name="th_quantity" class="text-end"><span>Quantity</span></th>
+                                    <th name="th_description" class="text-start"><span>Description</span></th>
                                     <th name="th_priceunit" t-attf-class="text-end text-nowrap {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"><span>Unit Price</span></th>
                                     <th name="th_discount" t-if="display_discount" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                         <span>Disc.%</span>
@@ -130,12 +170,12 @@
 
                                     <tr t-att-class="'fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
                                         <t t-if="line.display_type == 'product'" name="account_invoice_line_accountable">
-                                            <td name="account_invoice_line_name">
-                                                <span t-if="line.name" t-field="line.name" t-options="{'widget': 'text'}">Bacon Burger</span>
-                                            </td>
                                             <td name="td_quantity" class="text-end text-nowrap">
                                                 <span t-field="line.quantity">3.00</span>
                                                 <span t-field="line.product_uom_id"  groups="uom.group_uom">units</span>
+                                            </td>
+                                            <td name="account_invoice_line_name">
+                                                <span t-if="line.name" t-field="line.name" t-options="{'widget': 'text'}">Bacon Burger</span>
                                             </td>
                                             <td name="td_price_unit" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                                 <span class="text-nowrap" t-field="line.price_unit">9.00</span>
