--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -521,7 +521,7 @@
                     <field name="invoice_date" optional="show" column_invisible="context.get('default_move_type') not in ('in_invoice', 'in_refund', 'in_receipt')" readonly="state != 'draft'" string="Bill Date" decoration-warning="abnormal_date_warning"/>
                     <field name="invoice_date" optional="show" column_invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund', 'out_receipt')" readonly="state != 'draft'" string="Invoice Date" decoration-warning="abnormal_date_warning"/>
                     <field name="date" optional="hide" string="Accounting Date" readonly="state in ['cancel', 'posted']"/>
-                    <field name="invoice_date_due" widget="remaining_days" optional="show" invisible="payment_state in ('paid', 'in_payment', 'reversed') or state == 'cancel'"/>
+                    <field name="invoice_date_due" widget="remaining_days" optional="show" invisible="True or payment_state in ('paid', 'in_payment', 'reversed') or state == 'cancel'"/>
                     <field name="invoice_origin" optional="hide" string="Source Document"/>
                     <field name="payment_reference" optional="hide" column_invisible="context.get('default_move_type') in ('out_invoice', 'out_refund', 'out_receipt')"/>
                     <field name="ref" optional="hide"/>
@@ -537,15 +537,15 @@
                     <field name="currency_id" optional="hide" readonly="state in ['cancel', 'posted']"/>
                     <field name="company_currency_id" column_invisible="True"/>
                     <field name="checked" optional="hide" widget="boolean_toggle"/>
-                    <field name="status_in_payment"
+                    <!--<field name="status_in_payment"
                            string="Status"
                            widget="badge"
                            decoration-danger="payment_state == 'not_paid' and invoice_date_due &lt; context_today().strftime('%Y-%m-%d')"
                            decoration-warning="payment_state in ('partial', 'in_payment')"
                            decoration-success="payment_state in ('paid', 'reversed')"
-                           invisible="payment_state == 'invoicing_legacy' or move_type == 'entry'"
+                           invisible="True or payment_state == 'invoicing_legacy' or move_type == 'entry'"
                            optional="show"
-                    />
+                    />-->
                     <field name="move_sent_values"
                            string="Sent"
                            widget="badge"
@@ -1023,7 +1023,7 @@
                                        readonly="state != 'draft'"/>
 
                                 <!-- Invoice payment terms (only invoices) + due date (only invoices / receipts) -->
-                                <div class="o_td_label" invisible="move_type not in ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt')">
+                                <!--<div class="o_td_label" invisible="move_type not in ('out_invoice', 'out_refund', 'in_invoice', 'in_refund', 'out_receipt', 'in_receipt')">
                                     <label for="invoice_date_due" string="Due Date"
                                            invisible="invoice_payment_term_id"/>
                                     <label for="invoice_payment_term_id" string="Payment terms"
@@ -1039,7 +1039,7 @@
                                            context="{'example_date': invoice_date, 'example_amount': tax_totals['total_amount_currency']}"
                                            placeholder="Payment Terms"
                                            options="{'no_quick_create':True}" readonly="state in ['cancel', 'posted']"/>
-                                </div>
+                                </div>-->
                                 <field name="delivery_date" invisible="not show_delivery_date" readonly="state != 'draft'"/>
                                 <label for="journal_id" groups="account.group_account_readonly"/>
                                 <label for="currency_id" groups="!account.group_account_readonly,base.group_multi_currency"/>
@@ -1253,7 +1253,7 @@
                                                    readonly="state != 'draft' or (move_type not in ('in_invoice', 'in_refund', 'in_receipt') and not quick_edit_mode)"/>
 
                                             <field name="invoice_payments_widget" colspan="2" nolabel="1" widget="payment"/>
-                                            <field name="amount_residual" class="oe_subtotal_footer_separator" invisible="state == 'draft'"/>
+                                            <field name="amount_residual" class="oe_subtotal_footer_separator" invisible="True or state == 'draft'"/>
                                         </group>
                                         <field name="invoice_outstanding_credits_debits_widget"
                                             class="oe_invoice_outstanding_credits_debits py-3"
