hide some menus

--- a/addons/account/views/account_portal_templates.xml
+++ b/addons/account/views/account_portal_templates.xml
@@ -202,10 +202,10 @@
                         <iframe id="invoice_html" class="position-relative my-2" width="100%" height="100%" frameborder="0" scrolling="no" t-att-src="invoice.get_portal_url(report_type='html')"/>
                     </div>
                     <!-- chatter -->
-                    <div id="invoice_communication" class="mt-4">
-                        <h3>Communication history</h3>
-                        <t t-call="portal.message_thread"/>
-                    </div>
+<!--                    <div id="invoice_communication" class="mt-4">-->
+<!--                        <h3>Communication history</h3>-->
+<!--                        <t t-call="portal.message_thread"/>-->
+<!--                    </div>-->
                 </div>
             </div>
         </xpath>
