--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -123,6 +123,7 @@ a.o-discuss-mention {
 
 .o-mail-DiscussSystray {
     --border-color: #{$o-gray-300} !important; // cancel custom border color of dropdown
+    display: none !important;
 }
 
 .o-mail-DiscussSystray-class {
@@ -130,10 +131,10 @@ a.o-discuss-mention {
     margin-bottom: - $o-navbar-padding-v; // cancel navbar padding
     display: flex;
     align-items: center;
-
     &:hover, &.show {
         background-color: rgba(0, 0, 0, 0.075);
     }
+    display: none !important;
 }
 
 .o-mail-systrayFullscreenDropdownMenu {
