--- a/addons/mail/static/src/core/public_web/messaging_menu.scss
+++ b/addons/mail/static/src/core/public_web/messaging_menu.scss
@@ -3,6 +3,7 @@
     min-height: 50px;
     max-height: Min(calc(#{ $o-dropdown-max-height } - 5px), 630px); // -5px for borders
     background-color: var(--mail-MessagingMenu-bg, $o-view-background-color);
+    display: none !important;
 }
 
 .o-mail-MessagingMenu-list {
