--- a/addons/account/wizard/account_move_reversal_view.xml
+++ b/addons/account/wizard/account_move_reversal_view.xml
@@ -31,7 +31,7 @@
             <field name="view_mode">list,form</field>
             <field name="view_id" ref="view_account_move_reversal"/>
             <field name="target">new</field>
-            <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_no_one'))]"/>
             <field name="binding_model_id" ref="account.model_account_move" />
             <field name="binding_view_types">list</field>
         </record>
