--- a/addons/account_payment/wizards/payment_link_wizard_views.xml
+++ b/addons/account_payment/wizards/payment_link_wizard_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record id="action_invoice_order_generate_link" model="ir.actions.act_window">
+    <!--<record id="action_invoice_order_generate_link" model="ir.actions.act_window">
         <field name="name">Generate a Payment Link</field>
         <field name="res_model">payment.link.wizard</field>
         <field name="view_mode">form</field>
@@ -9,7 +9,7 @@
         <field name="target">new</field>
         <field name="binding_model_id" ref="model_account_move"/>
         <field name="binding_view_types">form</field>
-    </record>
+    </record>-->
 
     <record id="payment_link_wizard__form_inherit_account_payment" model="ir.ui.view">
         <field name="name">payment.link.wizard.form.inherit.account_payment</field>
